# OpenSYCL

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.cmd  build.preset.cmd  build.sh  build_from_docker.sh  vcpkg-configuration.json  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: benchmark-self-hosted.yml  linux-lit.yml  linux-self-hosted.yml  linux.yml  macos.yml  windows.yml
cmake/: InstallSysconf.cmake
cmake/overlays/python3/: portfile.cmake  vcpkg.json
examples/bruteforce_nbody/: CMakeLists.txt
include/hipSYCL/common/: appdb.hpp  filesystem.hpp
include/hipSYCL/runtime/: application.hpp  backend.hpp  backend_loader.hpp  dag_node.hpp  device_id.hpp  error.hpp  executor.hpp  inorder_executor.hpp  instrumentation.hpp  kernel_cache.hpp  multi_queue_executor.hpp  operations.hpp  runtime.hpp  settings.hpp
include/hipSYCL/runtime/generic/: async_worker.hpp
include/hipSYCL/runtime/ocl/: ocl_usm.hpp
install/: Dockerfile.debian  Dockerfile.ubuntu
src/common/: CMakeLists.txt  filesystem.cpp
src/compiler/: CMakeLists.txt
src/compiler/cbs/: SubCfgFormation.cpp
src/compiler/llvm-to-backend/: AddressSpaceInferencePass.cpp  CMakeLists.txt
src/compiler/stdpar/: SyncElision.cpp
src/libkernel/sscp/: CMakeLists.txt
src/runtime/: CMakeLists.txt  multi_queue_executor.cpp  settings.cpp
src/runtime/omp/: omp_queue.cpp
src/tools/: CMakeLists.txt
src/tools/acpp-appdb-tool/: CMakeLists.txt
src/tools/acpp-cl/: CMakeLists.txt  acpp-cl.cpp
src/tools/acpp-hcf-tool/: CMakeLists.txt
src/tools/acpp-info/: CMakeLists.txt
(+4 files in other folders)
